--- a/src/MediatR.Features.AspNetCore/MediatR.Features.AspNetCore.csproj
+++ b/src/MediatR.Features.AspNetCore/MediatR.Features.AspNetCore.csproj
@@ -2,10 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MediatR.Features.Abstractions\MediatR.Features.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
